# mtg-server

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  PLANNING.md  README.md  dev.sh  generate_sdk.sh  gradle.properties  settings.gradle.kts  test-local.sh
frontend/: .env.local  .env.test.example  .gitignore  PLANNING.md  eslint.config.mjs  index.html  package-lock.json  package.json  setup-test-env.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
server/: Cargo.toml
server/src/: conversions.rs  db.rs  handler_helpers.rs  handlers.rs  main.rs  seed.rs  store.rs
server/src/cards/: boros_energy.rs  mod.rs  registry.rs
server/src/deck/: loader.rs
server/src/engine/: mod.rs
server/src/engine/actions/: mod.rs  tests.rs  tests_auto_pass.rs  tests_replacement.rs  tests_triggered.rs
server/src/engine/actions/combat/: mod.rs  tests.rs
server/src/engine/actions/pregame/: mod.rs  tests.rs
server/src/engine/legal_actions/: mod.rs  tests.rs
server/src/engine/state_based/: mod.rs  tests.rs
server/src/engine/triggers/: mod.rs  tests.rs
server/src/game/: card.rs  mod.rs  state.rs  zone.rs
server/src/game/ability/: mod.rs  tests.rs
server/src/game/action/: mod.rs
server/src/game/card/: mod.rs  tests.rs
server/src/game/counter/: mod.rs  tests.rs
server/src/game/effect/: mod.rs
server/src/game/event/: mod.rs  tests.rs
server/src/game/keyword/: mod.rs
server/src/game/mana/: mod.rs  tests.rs
server/src/game/phases_and_steps/: mod.rs  tests.rs
server/src/game/stack/: mod.rs
server/src/game/state/: mod.rs  tests.rs  tests_helper.rs
server/src/game/zone/: mod.rs  tests.rs
(+155 files in other folders)
