[package]
name = "mtg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mtg-server-sdk = { path = "../mtg-server-sdk" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
hyper = { version = "0.14", features = ["server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "mtg-server"
path = "src/main.rs"

[[bin]]
name = "seed-cards"
path = "src/seed.rs"
